--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slider": "^1.2.0",
+    "@radix-ui/react-toggle": "^1.1.0",
     "@react-three/drei": "^9.108.1",
     "@react-three/fiber": "^8.16.8",
+    "clsx": "^2.1.1",
     "jotai": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "simplex-noise": "^4.0.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-radix": "^3.0.3",
     "three": "^0.166.1"
   },
   "devDependencies": {
