--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "three": "^0.166.1"
   },
   "devDependencies": {
+    "@types/node": "^20.14.9",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
