feat: gradient input

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "clsx": "^2.1.1",
     "jotai": "^2.8.4",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
+    "react-linear-gradient-picker": "^3.0.1",
     "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-radix": "^3.0.3",
