--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# Logs
 logs
 *.log
 npm-debug.log*
@@ -12,7 +11,8 @@ dist
 dist-ssr
 *.local
 
-# Editor directories and files
+Icon
+
 .vscode/*
 !.vscode/extensions.json
 .idea
