--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/drei": "^9.108.1",
     "@react-three/fiber": "^8.16.8",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.8",
     "jotai": "^2.8.4",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
