--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prettier": "^3.3.2",
     "prettier-plugin-organize-imports": "^4.0.0",
     "prettier-plugin-tailwindcss": "^0.6.5",
+    "r3f-perf": "^7.2.1",
     "tailwindcss": "^3.4.4",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
